--- a/.gitignore
+++ b/.gitignore
@@ -117,4 +117,21 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Node
